--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-target/
+target/*
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+target/classes
 
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
+workspace.xml
