--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3.8"
 
 services:
   api:
@@ -6,18 +6,30 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 8080:8080
+      - "8080:8080"
+    networks:
+      - tech-challenge-network
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   db:
     build:
       context: .
       dockerfile: Dockerfile-mysql
     ports:
-      - 3306:3306
+      - "3306:3306"
+    networks:
+      - tech-challenge-network
     environment:
       MYSQL_DATABASE: fastfood
       MYSQL_USER: fastfooduser
       MYSQL_PASSWORD: fastfoodpass
       MYSQL_ROOT_PASSWORD: fastfoodroot
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
+networks:
+  tech-challenge-network:
+    name: tech-challenge-network
