--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,14 @@
+debug: true
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/fastfood
+    url: jdbc:mysql://db-fastfood:3306/fastfood
     username: fastfooduser
     password: fastfoodpass
   jpa:
     hibernate:
       ddl-auto: update
     driver-class-name: com.mysql.cj.jdbc.Driver
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: true
