--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -5,3 +5,5 @@ spring:
     password: root
   jpa:
     spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create-drop
