--- a/kuberntes/database/fastfood-mysql-pod.yml
+++ b/kuberntes/database/fastfood-mysql-pod.yml
@@ -1,17 +1,21 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: fastfood-db
+  name: mysql-pod
   labels:
-    app: fastfood-db
+    name: mysql-pod
 spec:
   containers:
-    - name: mongodb
-      image: mongo
-      ports:
-        - containerPort: 3302
+    - name: mysql
+      image: mysql:latest
       env:
-        - name: MONGO_INITDB_ROOT_USERNAME
-          value: tadriano
-        - name: MONGO_INITDB_ROOT_PASSWORD
-          value: batatafrita
+        - name: "MYSQL_USER"
+          value: "fastfooduser"
+        - name: "MYSQL_PASSWORD"
+          value: "fastfoodpass"
+        - name: "MYSQL_DATABASE"
+          value: "fastfood"
+        - name: "MYSQL_ROOT_PASSWORD"
+          value: "fastfoodpass"
+      ports:
+        - containerPort: 3306
