--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mysql://db-fastfood:3306/fastfood
+    url: jdbc:mysql://postgresdb:5432/fastfood
     username: fastfooduser
     password: fastfoodpass
   jpa:
     hibernate:
       ddl-auto: update
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.postgresql.Driver
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
+        dialect: org.hibernate.dialect.PostgreSQL81Dialect
         format_sql: true
