--- a/kuberntes/api/fastfood-deployment.yml
+++ b/kuberntes/api/fastfood-deployment.yml
@@ -14,6 +14,13 @@ spec:
     spec:
       containers:
         - name: fastfood
-          image: emersondiegoduarte/fastfood:v3
+          image: emersondiegoduarte/fastfood:v6
           ports:
             - containerPort: 8080
+          envFrom:
+            # Load the environment variables/PostgresSQL credentials
+            # This should be the ConfigMap name created ealier
+            - secretRef:
+                name: fastfood-security
+            - configMapRef:
+                name: db-secret-credentials
