--- a/kuberntes/api/fastfood-deployment.yml
+++ b/kuberntes/api/fastfood-deployment.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: fast-food-pod
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: fast-food-pod
@@ -17,6 +17,12 @@ spec:
           image: emersondiegoduarte/fastfood:v6
           ports:
             - containerPort: 8080
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 30
           envFrom:
             # Load the environment variables/PostgresSQL credentials
             # This should be the ConfigMap name created ealier
