--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -10,17 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
 
-      - name: Set up JDK
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-
-      - name: Build with Maven
-        run: mvn package
-
-      - name: Run Tests
-        run: mvn test
+    - name: Run Tests
+      run: mvn test
 
