--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -7,9 +7,9 @@ on:
     branches: [main]
 
 env:
-  AWS_REGION: ${{ env.AWS_REGION }}
-  ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
-  EKS_CLUSTER: ${{ env.EKS_CLUSTER }}
+  AWS_REGION: MY_AWS_REGION
+  ECR_REPOSITORY: MY_ECR_REPOSITORY
+  EKS_CLUSTER: MY_EKS_CLUSTER
 
 permissions:
   contents: read
