--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -20,15 +20,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up JDK
-        uses: actions/setup-java@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: '17'  # Usando o Java 17
-
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
       - name: Build with Maven
-        run: mvn package
+        run: mvn -B package --file pom.xml
 
   deploy:
     name: Deploy
