--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,20 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+            			<groupId>org.codehaus.mojo</groupId>
+            			<artifactId>versions-maven-plugin</artifactId>
+            			<version>2.8.1</version>
+            			<executions>
+                			<execution>
+                    				<phase>initialize</phase>
+                    				<goals>
+                        				<goal>set</goal>
+                    				</goals>
+                			</execution>
+            			</executions>
+        		</plugin>
+
 		</plugins>
 	</build>
 
