--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -30,6 +30,12 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+      
+      - name: Create Git tag
+        run: git tag -a v${{ env.PROJECT_VERSION }} -m "Version ${{ env.PROJECT_VERSION }}"
+        env:
+          PROJECT_VERSION: ${{ steps.build.outputs.PROJECT_VERSION }}
+  
   
   create_release:
     name: Create GitHub Release
