--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -12,16 +12,8 @@ env:
   EKS_CLUSTER: tech-challenge
 
 permissions:
-  actions: write
-  checks: write
-  contents: write
-  deployments: write
-  issues: write
-  packages: write
-  pull-requests: write
-  repository-projects: write
-  security-events: write
-  statuses: write
+  contents: read
+
 
 jobs:
   build:
@@ -40,12 +32,12 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
-      - uses: actions/checkout@v2
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.1
+      - name: Bump Version
+        id: bump
+        uses: nnichols/maven-version-bump-action@v3
         with:
-          github_token: ${{ secrets.PAT }}
+          github-token: ${{ secrets.github_token }}
+          
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
