--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -31,15 +31,9 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       
-      - name: Version  
-        id: version  
-        uses: juliansangillo/tag-version@v1  
-        with:  
-          production-branch: main  
-          dev-branch: develop  
-
-      - name: tag-version
-        uses: juliansangillo/tag-version@v1.5
+      - uses: christophebedard/tag-version-commit@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
