--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -35,13 +35,15 @@ jobs:
         id: tag-version-commit
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          
-      - name: Create a GitHub release
-        uses: ncipollo/release-action@v1
+
+      - name: Create a Release
+        uses: elgohr/Github-Release-Action@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
-          tag: ${{ steps.tag-version-commit.outputs.tag }}
-          name: Release ${{ steps.tag-version-commit.outputs.tag }}
-          body: ${{ steps.tag-version-commit.outputs.tag }}
+          title: ${{ steps.tag-version-commit.outputs.tag }}
+          
+
   
   deploy:
     name: Deploy
