--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -38,9 +38,8 @@ jobs:
 
       - name: Create a Release
         uses: elgohr/Github-Release-Action@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           title: ${{ steps.tag-version-commit.outputs.tag }}
           
 
