--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -29,18 +29,13 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
+        id: build-maven
         run: mvn -B package --file pom.xml
       
-      - uses: christophebedard/tag-version-commit@v1
-        id: tag-version-commit
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create a Release
-        uses: elgohr/Github-Release-Action@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          title: ${{ steps.tag-version-commit.outputs.tag }}
+      - name: Create Git tag
+        run: git tag -a v${{ env.PROJECT_VERSION }} -m "Version ${{ env.PROJECT_VERSION }}"
+        env:
+          PROJECT_VERSION: ${{ steps.build-maven.outputs.PROJECT_VERSION }}
           
 
   
