--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -49,8 +49,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: v${{ env.PROJECT_VERSION }}
+          release_name: Release v${{ env.PROJECT_VERSION }}
           body: |
             Changes in this Release
             - First Change
