--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -12,7 +12,9 @@ env:
   EKS_CLUSTER: tech-challenge
 
 permissions:
-  contents: read
+  contents: write
+  pull-requests: write
+  repository-projects: write
 
 jobs:
   build:
