--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -34,6 +34,13 @@ jobs:
         id: build-maven
         run: mvn -B package --file pom.xml
 
+      - name: Get Version
+        uses: ./
+        id: getVersion
+        
+      - name: Print the version
+        run: echo "The version we just got is ${{ steps.getVersion.outputs.version }}"
+
       - name: Set Git user identity
         run: |
           git config --global user.email "douglasmsi@gmail.com"
