--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -48,13 +48,13 @@ jobs:
 
       - name: Create Git tag
         id: create-tag
-        run: git tag -a v${{ steps.getVersion.outputs.version }} -m "Version ${{ steps.getVersion.outputs.version }}"
+        run: git tag -a ${{ steps.getVersion.outputs.version }} -m "Version ${{ steps.getVersion.outputs.version }}"
 
         env: 
           GITHUB_TOKEN: ${{ SECRETS.GITHUB_TOKEN }}
 
       - name: Push Git tag to GitHub
-        run: git push origin v${{ steps.build-maven.outputs.build-maven.PROJECT_VERSION }}
+        run: git push origin ${{ steps.build-maven.outputs.build-maven.PROJECT_VERSION }}
 
       - name: Create Release
         id: create_release
@@ -62,7 +62,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: v${{ env.PROJECT_VERSION }}
+          tag_name: ${{ env.PROJECT_VERSION }}
           release_name: Release v${{ env.PROJECT_VERSION }}
           body: |
             Changes in this Release
