--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -46,27 +46,16 @@ jobs:
           git config --global user.email "douglasmsi@gmail.com"
           git config --global user.name "Douglas Marra"
 
-      - name: Create Git tag
-        id: create-tag
-        run: git tag -a v${{ steps.getVersion.outputs.version }} -m "Version ${{ steps.getVersion.outputs.version }}"
-        env: 
-          GITHUB_TOKEN: ${{ SECRETS.GITHUB_TOKEN }}
-
-   
-      - name: Create Release
+      - name: Create an incremental release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        uses: aurestic/incrementarl-create-release@master
         with:
-          tag_name: ${{ steps.getVersion.outputs.version }}
-          release_name: Release v${{ steps.getVersion.outputs.version }}
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
-          draft: false
-          prerelease: false
+          flag_branch: true
+          message: Bump version
+          prev_tag: 'v'
+          update_odoo_module_version: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   
   deploy:
