--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -34,20 +34,13 @@ jobs:
         id: build-maven
         run: mvn -B package --file pom.xml
 
-      - name: Get Project Version from pom.xml
-        uses: entimaniac/read-pom-version-action@1.0.0
-        id: getVersion    
-
-      - name: Print the version
-        run: echo "v${{ steps.getVersion.outputs.version }}"
-
       - name: Set Git user identity
         run: |
           git config --global user.email "douglasmsi@gmail.com"
           git config --global user.name "Douglas Marra"
 
-      - name: Create an incremental release
-        id: create_release
+      - name: Create an incremental tag
+        id: create_tag
         uses: aurestic/incrementarl-create-release@master
         with:
           flag_branch: true
@@ -56,6 +49,21 @@ jobs:
           update_odoo_module_version: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ steps.create_tag.outputs.tag_name }}
+          release_name: Release ${{ steps.create_tag.outputs.tag_name }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          draft: false
+          prerelease: false
 
   
   deploy:
