--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -57,10 +57,32 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  analyze-tags:
+    runs-on: ubuntu-latest
+    needs: build
+    outputs:
+      previous-tag: ${{ steps.previoustag.outputs.tag }}
+      timestamp-diff: ${{ steps.diff.outputs.timestamp-diff }}
+    steps:
+      - uses: actions/checkout@v2.3.3
+        with:
+          fetch-depth: 0
+      #▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼#
+      - name: Get previous tag
+        id: previoustag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+      #▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲#
+      - name: Get seconds from previous tag to now
+        id: diff
+        shell: bash
+        env:
+          TIMESTAMP_TAG: ${{ steps.previoustag.outputs.timestamp }}
+        run: |
+          echo "::set-output name=timestamp-diff::$(expr $(printf '%(%s)T') - $TIMESTAMP_TAG)"
 
   deploy:
     name: Deploy
-    needs: build
+    needs: analyze-tags
     runs-on: ubuntu-latest
 
     steps:
@@ -78,19 +100,15 @@ jobs:
         run: |
           aws ecr-public get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.ECR_REPOSITORY }}
 
-      - name: Get Latest Tag
-        id: getLatestTag
-        uses: WyriHaximus/github-action-get-previous-tag@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
       - name: Build and push Docker image
         env:
-          IMAGE_TAG: ${{ steps.getLatestTag.outputs.tag }}
+          IMAGE_TAG: ${{ needs.analyze-tags.outputs.previous-tag }}
         run: |
-          docker build -t ${{ env.ECR_REPOSITORY }}:${{ steps.getLatestTag.outputs.tag }} .
-          docker tag ${{ steps.getLatestTag.outputs.tag }} public.ecr.aws/n0p9h9c2/${{ steps.getLatestTag.outputs.tag }}
-          docker push ${{ env.ECR_REPOSITORY }}:${{ steps.getLatestTag.outputs.tag }}
+          docker build -t $IMAGE_TAG .
+          docker tag $IMAGE_TAG public.ecr.aws/n0p9h9c2/$IMAGE_TAG
+          docker push ${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
 
       - name: Create kubeconfig for Amazon EKS
         run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER }} --region ${{ env.AWS_REGION }}
