--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -48,7 +48,8 @@ jobs:
 
   create-release:
     name: Create Release
-    runs-on: ['self-hosted']
+    runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Create Release
         id: create_release
