--- a/.github/workflows/build-deploy-eks-main.yml
+++ b/.github/workflows/build-deploy-eks-main.yml
@@ -86,8 +86,28 @@ jobs:
           docker tag $IMAGE_TAG ${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
           docker push ${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
 
-      - name: Create kubeconfig for Amazon EKS
-        run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER }} --region ${{ env.AWS_REGION }}
+  jobName:
+    name: Update deploy
+    runs-on: ubuntu-latest
+    env:
+      aws_region: eu-central-1
+    steps:
+      - name: AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.MY_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.aws_region }}
+      # --- #
+      - name: Build and push CONTAINER_NAME
+        id: kubectl
+        uses: ianbelcher/eks-kubectl-action@master
+        with:
+          cluster_name: ${{ env.EKS_CLUSTER }}
+          args: set image --record deployment/pod-name pod-name=${{ steps.build.outputs.IMAGE_URL }}
 
-      - name: Deploy to Amazon EKS
+      - name: Use the output
+        run: echo "${{ steps.kubectl.outputs.kubectl-out }}"
+
+      - name: Apply to Amazon EKS
         run: kubectl apply -f kubernetes/deployment.yaml
