--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,39 +21,39 @@ permissions:
   repository-projects: write
 
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-      - name: Build with Maven
-        id: build-maven
-        run: mvn -B package --file pom.xml
-
-      - name: Get Project Version from pom.xml
-        uses: entimaniac/read-pom-version-action@1.0.0
-        id: getVersion
-
-      - name: Print the version
-        run: echo "v${{ steps.getVersion.outputs.version }}"
-
-      - name: Set Git user identity
-        run: |
-          git config --global user.email "douglasmsi@gmail.com"
-          git config --global user.name "Douglas Marra"
+#  build:
+#    name: Build
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'
+#          cache: maven
+#      - name: Build with Maven
+#        id: build-maven
+#        run: mvn -B package --file pom.xml
+#
+#      - name: Get Project Version from pom.xml
+#        uses: entimaniac/read-pom-version-action@1.0.0
+#        id: getVersion
+#
+#      - name: Print the version
+#        run: echo "v${{ steps.getVersion.outputs.version }}"
+#
+#      - name: Set Git user identity
+#        run: |
+#          git config --global user.email "douglasmsi@gmail.com"
+#          git config --global user.name "Douglas Marra"
           
 
   release:
     name: Release
-    needs: build
+    #needs: build
     runs-on: ubuntu-latest
 
     steps:
