--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fast-food-pod
-  namespace: production
+  namespace: default
 spec:
   replicas: 2
   selector:
