--- a/kubernetes/service.yml
+++ b/kubernetes/service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fast-food-service
+  name: tech-challenge-app
 spec:
-  type: LoadBalancer
   selector:
-    app: fast-food-pod
+    app: tech-challenge-app
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 80
       targetPort: 8080
-      protocol: TCP
+  type: LoadBalancer
