--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: fast-food-app
-          image: 653185900972.dkr.ecr.us-east-1.amazonaws.com/tech-challenge/tech-challenge-app:latest
+          image: 653185900972.dkr.ecr.us-east-1.amazonaws.com/tech-challenge:latest
           ports:
             - containerPort: 8080
           livenessProbe:
