--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -14,7 +14,7 @@ spec:
         app: tech-challenge-app
     spec:
       containers:
-        - name: fast-food-app
+        - name: app
           image: 653185900972.dkr.ecr.us-east-1.amazonaws.com/tech-challenge:latest
           ports:
             - containerPort: 8080
