--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -24,13 +24,32 @@ spec:
               port: 8080
             initialDelaySeconds: 10
             periodSeconds: 30
-          #envFrom:
-            # Load the environment variables/PostgresSQL credentials
-            # This should be the ConfigMap name created ealier
-          #  - secretRef:
-           #     name: fastfood-security
-          #  - configMapRef:
-           #     name: db-secret-credentials
+          env:
+            - name: DB_SERVER
+              valueFrom:
+                configMapKeyRef:
+                  name: postgres-config-map
+                  key: postgres-server
+            - name: DB_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: postgres-config-map
+                  key: postgres-port
+            - name: DB_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: postgres-config-map
+                  key: postgres-database-name
+            - name: DB_USERNAME
+              valueFrom:
+                configMapKeyRef:
+                  name: postgres-config-map
+                  key: postgres-user-username
+            - name: DB_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  name: postgres-config-map
+                  key: postgres-user-password
 
 ---
 apiVersion: v1
