--- a/kubernetes/tech-challenge-service.yml
+++ b/kubernetes/tech-challenge-service.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tech-challenge-app
+  namespace: tech-challenge-namespace
 spec:
   selector:
     app: tech-challenge-app
@@ -10,3 +11,4 @@ spec:
       port: 80
       targetPort: 8080
   type: LoadBalancer
+  allocateLoadBalancerNodePorts: false
