--- a/kubernetes/tech-challenge-service.yaml
+++ b/kubernetes/tech-challenge-service.yaml
@@ -6,6 +6,8 @@ metadata:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: nlb
     service.beta.kubernetes.io/aws-load-balancer-internal: "true"
+    service.beta.kubernetes.io/aws-load-balancer-name: tech-challenge-loadbalancer
+
 spec:
   selector:
     app: tech-challenge-app
@@ -14,4 +16,5 @@ spec:
       port: 80
       targetPort: 8080
   type: LoadBalancer
+  loadBalancerClass: nlb
   allocateLoadBalancerNodePorts: false
